ingress/helloworld-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-two  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-two
  template:
    metadata:
      labels:
        app: helloworld-two
    spec:
      containers:
      - name: helloworld-two
        image: e880613/hello-app:v2
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-two  
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: helloworld-two
