ingress/helloworld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello-world-one(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: helloworld-one
            port:
              number: 8080
      - path: /hello-world-two(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: helloworld-two
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: helloworld-one
            port:
              number: 8080
